# python-poetry-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/: main.py
tests/: test_main.py
