[tool.poetry]
name = "python-poetry-template"
version = "0.1.0"
description = "Python poetryのtemplateリポジトリ"
authors = ["Takahashi Katsuyuki <takahashi.k@world-wing.com>"]
readme = "README.md"
repository = "https://github.com/jDBTISK/python-project-template"


[tool.sphinx-pyproject]
project = "python-poetry-template"
copyright = "2023, Takahashi Katsuyuki"
language = "en"
package_root = "python-poetry-template"
html_theme = "sphinx_rtd_theme"
todo_include_todos = true
templates_path = ["_templates"]
html_static_path = ["_static"]
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.viewcode",
    "sphinx.ext.todo",
    "sphinx.ext.napoleon",
]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^23.7.0"
isort = "^5.12.0"
taskipy = "^1.12.0"
pytest = "^7.4.0"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
sphinx-pyproject = "^0.3.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-eradicate = "^1.5.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
mypy = "^1.5.1"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -s -vv --cov=. --cov-branch --cov-report=html"
format = "task format-black && task format-isort"
format-black = "black src tests"
format-isort = "isort src tests"
lint = "task lint-black && task lint-flake8 && task lint-mypy"
lint-flake8 = "flake8 src tests"
lint-mypy = "mypy src tests"
lint-black = "black --check src tests"
docs = "sphinx-apidoc -F -o docs/source src && sphinx-build docs/source docs/build"


[tool.black]
line-length = 100


[tool.isort]
# see: https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
profile = "black"
line_length = 100
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party Library"
import_heading_firstparty = "First Party Library"
import_heading_localfolder = "Local Library"
multi_line_output = 3
include_trailing_comma = true


[tool.flake8]
# see: https://flake8.pycqa.org/en/latest/user/options.html#index-of-options
max-line-length = 100
# see: https://flake8.pycqa.org/en/latest/user/error-codes.html
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__"]
max-complexity = 10


[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
